--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="asykur.khamid.award">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".utils.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:name=".utils.MyApplication"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.LoginActivity"
+        <activity android:name=".view.FilterActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".view.MainActivity" />
+        <activity
+            android:name=".view.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".view.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".view.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
