--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,14 @@ android {
         experimental = true
     }
 
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
